<resources>
  <string name="app_name" translatable="false">Henri Potier</string>
  <string name="no_books">No books</string>
  <string name="default_author">J.K. Rowling</string>
  <string name="loading_error">Error while loading books.</string>
  <string name="no_network">No network.</string>
  <string name="confirm">Confirm</string>
  <string name="cart_empty">Cart is empty</string>
  <string name="total">Total</string>
  <string name="title_book">Book</string>
  <string name="title_quantity">Quantity</string>
  <string name="title_price">Price</string>

  <string name="offer">Offer</string>

  <string name="empty_rating" translatable="false">--</string>
  <string name="empty_review" translatable="false">--</string>
  <string name="rating_range">/5</string>
  <string name="none_rating">n/a</string>

  <string name="share">Share</string>

  <plurals name="votes">
    <item quantity="zero">%d votes</item>
    <item quantity="one">%d vote</item>
    <item quantity="two">%d votes</item>
    <item quantity="few">%d votes</item>
    <item quantity="many">%d votes</item>
    <item quantity="other">%d votes</item>
  </plurals>

  <plurals name="ratings">
    <item quantity="zero">%d ratings</item>
    <item quantity="one">%d rating</item>
    <item quantity="two">%d ratings</item>
    <item quantity="few">%d ratings</item>
    <item quantity="many">%d ratings</item>
    <item quantity="other">%d ratings</item>
  </plurals>

  <plurals name="reviews">
    <item quantity="zero">%d reviews</item>
    <item quantity="one">%d review</item>
    <item quantity="two">%d reviews</item>
    <item quantity="few">%d reviews</item>
    <item quantity="many">%d reviews</item>
    <item quantity="other">%d reviews</item>
  </plurals>

  <string name="title_details">Details</string>
  <string name="publication_details">Publication</string>
  <string name="more">More</string>
  <string name="title_reviews">Reviews</string>
  <string name="title_publisher">Publisher</string>
  <string name="title_pages_info">Pages</string>
  <string name="title_ratings">Ratings</string>
  <string name="title_description">Description</string>

</resources>
